fix: search component sizing on small screens

--- a/src/features/header/components/styles/explore-header.module.scss
+++ b/src/features/header/components/styles/explore-header.module.scss
@@ -8,16 +8,8 @@
   gap: 1rem;
   padding-inline: 1em;
 
-  label {
-    height: 26px;
-  }
-
   @include mq("small") {
     grid-template-columns: 1fr auto;
-
-    label {
-      height: 100%;
-    }
   }
 }
 
