--- a/src/features/search/components/styles/search-results-modal.module.scss
+++ b/src/features/search/components/styles/search-results-modal.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--clr-background);
-  z-index: var(--z-index-modal);
+  z-index: var(--z-index-popover);
   overflow: auto;
 
   .progressbar {
